...
            app:destination="@id/listFragment"
            app:launchSingleTop="false"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_keyboardFragment_to_ringtonePickerFragment"
            app:destination="@id/ringtonePickerFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <argument
            android:name="itemId"
            app:argType="long" />
        <argument
...
            android:id="@+id/action_ringtonePickerFragment_to_keyboardFragment"
            app:destination="@id/keyboardFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_ringtonePickerFragment_to_ringtoneCustomPickerFragment"
            app:destination="@id/ringtoneCustomPickerFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <argument android:name="itemId"
            app:argType="long" />
        <argument
            android:name="ringtoneTitle"
...
